<resources>
    <string name="app_name">SimpleMediaPlayer</string>
    <string name="singer_name">Singer Name</string>
    <string name="_00_00">00:00</string>
    <string name="song_title">Song Title</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="more">MORE</string>
    <string name="up_next">Up Next</string>
</resources>