<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true">

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/card_view_background"
        app:layoutDescription="@xml/main_activity_scene"
        tools:context=".ui.activities.MainActivity">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <TextView
            android:id="@+id/tvSongTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_marginTop="70dp"
            android:backgroundTint="@android:color/transparent"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/song_title"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/guideLine"
            app:layout_constraintStart_toStartOf="@+id/guideLine"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvSingerName"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/transparent"
            android:ellipsize="end"
            android:gravity="center"
            android:text="@string/singer_name"
            android:textColor="@color/white_smoke"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="@id/tvSongTitle"
            app:layout_constraintRight_toRightOf="@id/tvSongTitle"
            app:layout_constraintTop_toBottomOf="@id/tvSongTitle" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btnShare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_share"
            android:paddingTop="10dp"
            app:layout_constraintBottom_toBottomOf="@+id/tvSongTitle"
            app:layout_constraintLeft_toRightOf="@+id/tvSingerName"
            app:layout_constraintTop_toTopOf="@+id/tvSongTitle" />

        <TextView
            android:id="@+id/tvCurrentDuration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:text="@string/_00_00"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvSingerName"/>

        <TextView
            android:id="@+id/tvMaxDuration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:text="@string/_00_00"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvSingerName" />
        <SeekBar
            android:id="@+id/sbMusic"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:progressBackgroundTint="@color/white"
            android:layout_marginHorizontal="30dp"
            android:alpha="@android:integer/config_longAnimTime"
            app:layout_constraintTop_toBottomOf="@+id/tvCurrentDuration"/>
        <LinearLayout
            android:id="@+id/layoutPanel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/sbMusic">

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/btnPrevious"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/ic_previous_24" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/btnPlayPause"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:background="@drawable/ic_baseline_play_circle_outline_24" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/btnNext"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/ic_next_24" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvPlaylist"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:background="@drawable/background_corner"
            android:clipToPadding="false"
            android:overScrollMode="never"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layoutPanel"
            tools:listitem="@layout/layout_list_cell" />

        <View
            android:id="@+id/viewTop"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/white"
            android:alpha="0"
            app:layout_constraintLeft_toLeftOf="@+id/layoutPanel"
            app:layout_constraintRight_toRightOf="@+id/layoutPanel"
            app:layout_constraintTop_toTopOf="@+id/tvSongTitle" />

        <View
            android:id="@+id/viewBottom"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/white"
            android:alpha="0"
            app:layout_constraintBottom_toBottomOf="@+id/layoutPanel"
            app:layout_constraintLeft_toLeftOf="@+id/layoutPanel"
            app:layout_constraintRight_toRightOf="@+id/layoutPanel" />

        <View
            android:id="@+id/viewLeft"
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:alpha="0"
            android:background="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/viewBottom"
            app:layout_constraintLeft_toLeftOf="@+id/layoutPanel"
            app:layout_constraintTop_toBottomOf="@+id/viewTop" />

        <View
            android:id="@+id/viewRight"
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:background="@color/white"
            android:alpha="0"
            app:layout_constraintBottom_toTopOf="@+id/viewBottom"
            app:layout_constraintRight_toRightOf="@+id/layoutPanel"
            app:layout_constraintTop_toBottomOf="@+id/viewTop" />

    </androidx.constraintlayout.motion.widget.MotionLayout>

</layout>
